changed prolific link

--- a/finish.html
+++ b/finish.html
@@ -14,7 +14,7 @@
     <p class="jspsych-display-element">Please click the button below to return to Prolific and complete the study.</p>
     <br>
     <button class="jspsych-btn" type='button'
-      onclick="window.location='https://app.prolific.com/submissions/complete?cc=C6DLSFZ1'">Back to Prolific</button>
+      onclick="window.location='https://app.prolific.com/submissions/complete?cc=CBE9N4CL'">Back to Prolific</button>
       <!-- CHANGE THE URL ABOVE FOR THE LIVE PROLIFIC EXPERIMENT -->
   </div>
 </body>
